--- a/config/configuration.json
+++ b/config/configuration.json
@@ -1,7 +1,1 @@
-{
-  "setup-path": "C:/BRASINDICE",
-  "is-instaled": false,
-  "url": "www.brasindice.com.br",
-  "login": 54124,
-  "senha": "6RN2A7D9"
-}
+{"setup-path":{"path":"C:\\BRASINDICE"},"is-instaled":false,"url":"www.brasindice.com.br","login":"54124","password":"NlJOMkE3RDk\u003d"}
