--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.class
 
 #compiled path
-./target
+target
 
 # Log file
 *.log
@@ -11,7 +11,7 @@
 *.ctxt
 
 #configuration file
-./config/configuration.json
+config/configuration.json
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -27,3 +27,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+target/generated-sources/
+target/generated-test-sources/
