--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.10.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.github.tiagoadmstz</groupId>
+            <artifactId>datemj</artifactId>
+            <version>1.0.0.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
